--- a/rpc-common/pom.xml
+++ b/rpc-common/pom.xml
@@ -10,6 +10,15 @@
     </parent>
 
     <artifactId>rpc-common</artifactId>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.87.Final</version>
+        </dependency>
+
+    </dependencies>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
