--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!--序列化选型方法1：json        -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.14.2</version>
+        </dependency>
+
+        <!--序列化选型2：hessian-->
+        <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>hessian</artifactId>
+            <version>4.0.66</version>
+        </dependency>
     </dependencies>
 
     <properties>
