--- a/test-rpc-client/pom.xml
+++ b/test-rpc-client/pom.xml
@@ -9,14 +9,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>rpc-service</artifactId>
-
+    <artifactId>test-rpc-client</artifactId>
     <dependencies>
-        <dependency>
-            <groupId>com.zyc</groupId>
-            <artifactId>rpc-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
         <dependency>
             <groupId>com.zyc</groupId>
             <artifactId>rpc-common</artifactId>
@@ -24,14 +18,13 @@
         </dependency>
         <dependency>
             <groupId>com.zyc</groupId>
-            <artifactId>test-rpc-service-api</artifactId>
+            <artifactId>rpc-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.zyc</groupId>
             <artifactId>test-rpc-service-api</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
