--- a/test-rpc-registry-center/pom.xml
+++ b/test-rpc-registry-center/pom.xml
@@ -9,14 +9,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>rpc-service</artifactId>
-
+    <artifactId>test-rpc-registry-center</artifactId>
     <dependencies>
-        <dependency>
-            <groupId>com.zyc</groupId>
-            <artifactId>rpc-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
         <dependency>
             <groupId>com.zyc</groupId>
             <artifactId>rpc-common</artifactId>
@@ -24,17 +18,10 @@
         </dependency>
         <dependency>
             <groupId>com.zyc</groupId>
-            <artifactId>test-rpc-service-api</artifactId>
+            <artifactId>rpc-core</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.zyc</groupId>
-            <artifactId>test-rpc-service-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
-
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
