--- a/test-rpc-service/pom.xml
+++ b/test-rpc-service/pom.xml
@@ -9,8 +9,14 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>rpc-registry-center</artifactId>
+    <artifactId>test-rpc-service</artifactId>
+
     <dependencies>
+        <dependency>
+            <groupId>com.zyc</groupId>
+            <artifactId>rpc-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.zyc</groupId>
             <artifactId>rpc-common</artifactId>
@@ -18,10 +24,17 @@
         </dependency>
         <dependency>
             <groupId>com.zyc</groupId>
-            <artifactId>rpc-core</artifactId>
+            <artifactId>test-rpc-service-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.zyc</groupId>
+            <artifactId>test-rpc-service-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
